İkinci proje örneği eklendi. Bazı isim değişiklikleri yapıldı.

--- a/Grid2/MainWindow.xaml
+++ b/Grid2/MainWindow.xaml
@@ -5,8 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Grid2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="650" Width="1000">
+        Title="MainWindow" Height="650" Width="400">
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TextBlock TextWrapping="Wrap"
+                   Background="Beige"
+                   FontSize="24"
+                   Text="Metin Blok Kontrol"/>
     </Grid>
 </Window>
