--- a/StyleTemplate1/MainWindow.xaml
+++ b/StyleTemplate1/MainWindow.xaml
@@ -92,5 +92,21 @@
 
         <Button Grid.Row="1" Grid.Column="2" Style="{StaticResource Yazı Büyülten Düğme}"
                 Content="BOOM"/>
+
+        <Button Grid.Row="1" Grid.Column="3" Content="DÜĞME"
+                Background="Aquamarine" FontSize="36" Width="150" Height="120">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Grid>
+                        <Ellipse Stroke="Gray" StrokeThickness="1"
+                             Fill="{TemplateBinding Background}"/>
+                        <ContentControl Content="{TemplateBinding Content}"
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        FontSize="{TemplateBinding FontSize}"/>
+                    </Grid>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
     </UniformGrid>
 </Window>
