--- a/Grid2/MainWindow.xaml
+++ b/Grid2/MainWindow.xaml
@@ -5,11 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Grid2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="650" Width="400">
+        Title="MainWindow" Height="577" Width="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <TextBlock TextWrapping="Wrap"
                    Background="Beige"
